# src/internal/docs/swagger.yaml
@@ -1,13 +1,6 @@
 basePath: /
 definitions:
-  models.User:
-    properties:
-      _id:
-        type: string
-      username:
-        type: string
-    type: object
-  users.ResponseHTTP:
+  users_handler.ResponseHTTP:
     properties:
       data: {}
       message:
@@ -15,7 +8,12 @@ definitions:
       success:
         type: boolean
     type: object
-host: 127.0.0.1:3300
+  users_handler.User:
+    properties:
+      username:
+        type: string
+    type: object
+host: 127.0.0.1:3000
 info:
   contact:
     email: ??
@@ -40,19 +38,19 @@ paths:
         "201":
           description: Created
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
         "406":
           description: Not Acceptable
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
         "503":
           description: Service Unavailable
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
       summary: Create user
       tags:
       - users
@@ -74,21 +72,21 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/users.ResponseHTTP'
+            - $ref: '#/definitions/users_handler.ResponseHTTP'
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/models.User'
+                    $ref: '#/definitions/users_handler.User'
                   type: array
               type: object
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
         "503":
           description: Service Unavailable
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
       summary: Get user by ID
       tags:
       - users
@@ -104,67 +102,28 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/users.ResponseHTTP'
+            - $ref: '#/definitions/users_handler.ResponseHTTP'
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/models.User'
+                    $ref: '#/definitions/users_handler.User'
                   type: array
               type: object
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
         "404":
           description: Not Found
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
         "503":
           description: Service Unavailable
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
       summary: Get current user
       tags:
       - users
-<<<<<<< HEAD
-=======
-  /users/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Get user by ID
-      parameters:
-      - description: User ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/users.ResponseHTTP'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/models.User'
-                  type: array
-              type: object
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/users.ResponseHTTP'
-        "503":
-          description: Service Unavailable
-          schema:
-            $ref: '#/definitions/users.ResponseHTTP'
-      summary: Get user by ID
-      tags:
-      - users
->>>>>>> 9e910e6 (Implementing endpoint structure)
   /users/set:{set}:
     get:
       consumes:
@@ -174,10 +133,7 @@ paths:
       - description: Set of users
         in: path
         name: set
-<<<<<<< HEAD
         required: true
-=======
->>>>>>> 9e910e6 (Implementing endpoint structure)
         type: integer
       produces:
       - application/json
@@ -186,25 +142,25 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/users.ResponseHTTP'
+            - $ref: '#/definitions/users_handler.ResponseHTTP'
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/models.User'
+                    $ref: '#/definitions/users_handler.User'
                   type: array
               type: object
         "401":
           description: Unauthorized
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
         "406":
           description: Not Acceptable
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
         "503":
           description: Service Unavailable
           schema:
-            $ref: '#/definitions/users.ResponseHTTP'
+            $ref: '#/definitions/users_handler.ResponseHTTP'
       summary: Get set of all users
       tags:
       - users
